# lclstreamer

./: .buildinfo  .buildinfo.bak  .gitignore  404.html  README.md  activation-psana2.sh  activation.sh  advanced.html  configuration.html  configuration_data_handlers.html  configuration_data_serializers.html  configuration_data_sources.html  configuration_event_sources.html  configuration_processing_pipelines.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  sitemap.xml  usage.html
.github/workflows/: test.yml
.zed/: settings.json
_sources/: advanced.md.txt  configuration.md.txt  configuration_data_serializers.md.txt  configuration_event_sources.md.txt  configuration_processing_pipelines.md.txt
configuration/: index.html
configuration_data_handlers/: index.html
configuration_data_serializers/: index.html
configuration_data_sources/: index.html
configuration_event_sources/: index.html
configuration_lclstreamer/: index.html
configuration_processing_pipelines/: index.html
docs/: README.md  conf.py  index.rst  mkdocs.yml
docs/docs/: 01. index.md  02. installation_running.md  03. configuration.md  04. configuration_event_sources.md  06. configuration_data_serializers.md  07. configuration_data_handlers.md  configuration.md  configuration_data_handlers.md  configuration_data_serializers.md  configuration_data_sources.md  configuration_event_sources.md  configuration_lclstreamer.md  configuration_processing_pipelines.md  index.md  installation_running.md  lclstreamer_data_workflow.md
docs/site/: index.html
docs/site/configuration_data_handlers/: index.html
docs/site/configuration_data_serializers/: index.html
docs/site/configuration_event_sources/: index.html
docs/site/installation_running/: index.html
docs/source/: conf.py  configuration_data_handlers.md  configuration_data_sources.md  index.md  installation.md  usage.md
examples/: lclstreamer-generic.yaml  lclstreamer-internal.yaml  lclstreamer-psana1-simplon.yml  lclstreamer-psana1-to-sdfada-with-preprocessing.yaml  lclstreamer-psana1-to-sdfada.yaml  lclstreamer-psana1.yaml  lclstreamer-psana2-filemon.yaml  lclstreamer-psana2-mfx.yaml  lclstreamer-psana2-simplon.yml  lclstreamer-psana2-tmo.yaml  lclstreamer-quynh.yaml  lclstreamer-random-to-sdfada-numpy.yaml  lclstreamer-random-to-sdfada.yaml  lclstreamer.yaml  psana2.yaml  psana_pull_script.py  psana_pull_script_inspect.py  pull_script_hdf5_nng.py  pull_script_hdf5_zmq.py  pull_script_inspect_nng.py  pull_script_inspect_zmq.py  pull_script_simplon_nng.py  pull_script_simplon_zmq.py  simplon_pull_script.py
installation_running/: index.html
lclstreamer_data_workflow/: index.html
search/: search_index.json
src/lclstreamer/: event_source.py
src/lclstreamer/app/: lclstreamer.py
src/lclstreamer/backend/: event_source.py  event_sources.py  psana1_data_sources.py  psana1_event_sources.py
src/lclstreamer/backend/generic/: data_sources.py  event_sources.py
src/lclstreamer/backend/psana1/: data_sources.py  event_sources.py
src/lclstreamer/backend/psana2/: data_sources.py  event_sources.py
src/lclstreamer/cmd/: lclstreamer.py
src/lclstreamer/data_handlers/: setup.py
src/lclstreamer/data_handlers/files/: binary.py
src/lclstreamer/data_handlers/streaming/: binary.py
src/lclstreamer/data_serializers/: setup.py
src/lclstreamer/data_serializers/dectris/: simplon.py
src/lclstreamer/data_serializers/files/: fast_binary.py  hdf5.py  numpy.py
src/lclstreamer/event_data_sources/: setup.py
src/lclstreamer/event_data_sources/generic/: data_sources.py  event_sources.py
src/lclstreamer/event_data_sources/psana1/: data_sources.py  event_sources.py
src/lclstreamer/event_data_sources/psana2/: data_sources.py  event_sources.py
src/lclstreamer/frontend/: data_handling.py  data_serializer.py  data_serializers.py  file_data_handlers.py  file_format_serializers.py  generic_processing.py  generic_processing_pipelines.py  parameters.py  processing_pipeline.py  processing_pipeline_utils.py  processing_pipelines.py  stream_utils.py  streaming_data_handlers.py
src/lclstreamer/frontend/data_handlers/: files.py  streaming.py
src/lclstreamer/frontend/data_serializers/: fast_binary.py  file_formats.py  json.py  tensor.py
src/lclstreamer/frontend/processing_pipelines/: generic.py  preprocessing.py  utils.py
src/lclstreamer/models/: parameters.py  types.py
src/lclstreamer/processing_pipelines/: setup.py
src/lclstreamer/processing_pipelines/common/: data_storage.py
src/lclstreamer/processing_pipelines/crystallography/: peaknet.py
src/lclstreamer/processing_pipelines/generic/: generic.py
src/lclstreamer/protocols/: backend.py  frontend.py
src/lclstreamer/utils/: logging.py  logging_utils.py  parameters.py  protocols.py  stream.py  stream_utils.py  typing.py
tests/: test_clock.py  test_detector_interface.py  test_detector_interface_psana2.py  test_generic.py  test_internal_event_source.py  test_lclstreamer.py  test_lclstreamer_command.py  test_params.py  test_psana1_data_sources.py  test_psana2_data_sources.py  test_psana2_integration.py  test_stream.py
tests/fixtures/: generate_xtc2_fixture.py  test_fixture.xtc2
