[project]
name = "lclstreamer"
requires-python = ">= 3.9"
version = "0.1.0"
dependencies = ["typer>=0.15.2,<0.16", "numpy", "stream @ git+https://github.com/frobnitzem/stream.py", "pydantic>=2.10.6,<3", "pyyaml>=6.0.2,<7", "hdf5plugin>=5.1.0,<6", "pyzmq", "pynng>=0.8.1,<0.9", "mkdocs-material>=9.6.11,<10", "mkdocstrings-python>=1.16.10,<2", "rich>=14.0.0,<15"]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project.scripts]
lclstreamer = "lclstreamer.cmd.lclstreamer:app"

[tool.pyright]
diagnosticMode = "workspace"
typeCheckingMode = "strict"
pythonPath = ".pixi/envs/default/bin/python"

[tool.isort]
py_version = 311
profile = "black"

[tool.mypy]
show_error_codes = true
python_version = 3.11
python_executable = ".pixi/envs/default/bin/python"

[tool.pixi.activation]
scripts = ["activation.sh"]

[tool.pixi.project]
channels = ["lcls-i", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
lclstreamer = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
psana = "4.0.65.*"
openmpi = ">=5.0.7,<6"
mpi4py = ">=4.0.3,<5"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
